--- a/index.html
+++ b/index.html
@@ -138,7 +138,8 @@
                 juegosLista.style.display = "none";
             }
         });
-    </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9679943570109847"
+     crossorigin="anonymous"></script>
 
 </body>
 </html>
