--- a/index.html
+++ b/index.html
@@ -4,97 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Canal</title>
-    <style>
-        /* Estilos generales */
-        body {
-            background-color: white; /* Fondo blanco */
-            color: black;
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 0;
-            padding: 0;
-        }
-
-        /* Barra superior */
-        header {
-            background-color: #ADFF2F; /* Verde limón */
-            padding: 10px 0;
-        }
-
-        nav ul {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-        }
-
-        nav ul li {
-            display: inline;
-        }
-
-        nav ul li a {
-            text-decoration: none;
-            color: black;
-            font-weight: bold;
-            font-size: 1.2em;
-        }
-
-        /* Sección de Juegos */
-        #juegos-lista {
-            background-color: rgba(0, 0, 0, 0.8);
-            color: white;
-            padding: 20px;
-            margin-top: 10px;
-            border-radius: 10px;
-            display: none;
-        }
-
-        #juegos-lista h2 {
-            margin-bottom: 10px;
-        }
-
-        #juegos-lista ul {
-            list-style: none;
-            padding: 0;
-        }
-
-        #juegos-lista li {
-            margin: 10px 0;
-        }
-
-        #juegos-lista a {
-            color: white;
-            text-decoration: none;
-            font-size: 1.2em;
-        }
-
-        /* Botón Suscribirse */
-        #subscribe-btn {
-            background-color: #ADFF2F;
-            color: black;
-            border: 2px solid black;
-            padding: 10px 20px;
-            font-size: 1.2em;
-            cursor: pointer;
-            transition: 0.3s;
-            border-radius: 5px;
-            display: inline-block;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        #subscribe-btn:hover {
-            background-color: #88CC00;
-            color: white;
-        }
-
-        /* Ocultar elementos */
-        .oculto {
-            display: none;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -102,18 +12,10 @@
         <nav>
             <ul>
                 <li><a href="#">Inicio</a></li>
-                <li><a href="#" id="juegos-btn">Juegos</a></li>
                 <li><a href="https://www.instagram.com/rmsaxxe" target="_blank">Redes Sociales</a></li>
             </ul>
         </nav>
     </header>
-
-    <section id="juegos-lista" class="oculto">
-        <h2>Juegos del Canal</h2>
-        <ul>
-            <li><a href="minecraft.html">Minecraft</a></li>
-        </ul>
-    </section>
 
     <main>
         <h1>Bienvenidos a Mi Canal</h1>
@@ -125,21 +27,13 @@
         <p>🎥 Nuevo video subido: <strong>"Cómo construir una casa épica en Minecraft"</strong></p>
         
         <h2>📌 Sobre el canal</h2>
-        <p>Este canal se dedica a subir juegos gratis gameplays y tutoriales.</p>
+        <p>Este canal se dedica a subir juegos gratis, gameplays y tutoriales.</p>
+
+        <h2>🎮 Descarga Minecraft Actualizado</h2>
+        <p>Haz clic en el siguiente enlace para descargar la última versión de Minecraft:</p>
+        <a href="minecraft.html" id="descargar-minecraft">Descargar Minecraft Actualizado</a>
     </main>
 
-    <script>
-        // Mostrar / Ocultar juegos
-        document.getElementById("juegos-btn").addEventListener("click", function() {
-            let juegosLista = document.getElementById("juegos-lista");
-            if (juegosLista.style.display === "none" || juegosLista.style.display === "") {
-                juegosLista.style.display = "block";
-            } else {
-                juegosLista.style.display = "none";
-            }
-        });
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9679943570109847"
-     crossorigin="anonymous"></script>
-
+    <script src="script.js"></script>
 </body>
 </html>
