--- a/dls.html
+++ b/dls.html
@@ -7,35 +7,49 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #1E3A8A; /* Azul oscuro */
-            color: white;
-            text-align: center;
-            padding: 20px;
+            background-color: #ffffff; /* Fondo blanco */
+            color: #333;
+            margin: 0;
+            padding: 0;
         }
-        h1 {
-            color: #60A5FA; /* Azul claro */
+        /* Barra de navegación */
+        .navbar {
+            background-color: #1E3A8A; /* Azul oscuro */
+            padding: 15px;
+            text-align: center;
+        }
+        .navbar a {
+            color: white;
+            text-decoration: none;
+            font-size: 18px;
+            padding: 10px 20px;
         }
         .container {
             max-width: 600px;
             margin: auto;
-            background: rgba(255, 255, 255, 0.1);
+            text-align: center;
             padding: 20px;
-            border-radius: 10px;
         }
+        h1 {
+            color: #1E3A8A;
+        }
+        /* Botón de descarga */
         .btn-descargar {
             display: inline-block;
-            background: url('https://upload.wikimedia.org/wikipedia/commons/6/6a/Download.png') no-repeat center center;
-            background-size: cover;
-            width: 200px;
-            height: 60px;
-            border: none;
-            cursor: pointer;
-            text-indent: -9999px;
+            background-color: #3B82F6;
+            color: white;
+            font-size: 18px;
+            font-weight: bold;
+            padding: 15px 30px;
+            text-decoration: none;
+            border-radius: 5px;
             margin-top: 20px;
+            transition: background 0.3s ease;
         }
         .btn-descargar:hover {
-            opacity: 0.8;
+            background-color: #2563EB;
         }
+        /* Botón de volver */
         .volver {
             display: inline-block;
             margin-top: 20px;
@@ -48,16 +62,33 @@
         .volver:hover {
             background-color: #2563EB;
         }
+        /* Anuncios */
+        .adsense {
+            margin-top: 20px;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
+
+    <!-- Barra de navegación -->
+    <div class="navbar">
+        <a href="index.html">Inicio</a>
+        <a href="#">Descargar</a>
+        <a href="#">Contacto</a>
+    </div>
 
     <div class="container">
         <h1>Descarga Dream League Soccer 2025 - Mod</h1>
         <p>Disfruta del nuevo DLS 2025 con mejoras y características exclusivas.</p>
         
+        <!-- Espacio para anuncios -->
+        <div class="adsense">
+            <!-- PEGA AQUÍ TU CÓDIGO DE GOOGLE ADSENSE -->
+        </div>
+
         <a href="https://www.mediafire.com/file/y4hwoh1tjcr264y/DLS25--mod-GamesteelStudio.apk/file" class="btn-descargar">
-            Descargar
+            Descargar MediaFire
         </a>
 
         <br>
