--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
         <p>Haz clic en el siguiente enlace para descargar la última versión de Minecraft:</p>
         <a href="minecraft.html" id="descargar-minecraft">Descargar Minecraft Actualizado</a>
     </main>
+<div style="text-align: center; margin-top: 40px;">
+    <h2>Descarga aquí Dream League Soccer 2025</h2>
+    <a href="dls.html" class="btn-descargar">Descargar DLS</a>
+</div>
 
     <script src="script.js"></script>
 </body>
